kub-files/spr-service.yml
apiVersion: v1
kind: Service

metadata:
  name: spring

spec:
  type: NodePort

  selector:
    app: spring

  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
